hphp/test/zend/good/ext/curl/tests/curl_setopt_basic002.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
  require_once 'skipif.inc';
  skipif();
}
