hphp/test/zend/bad/ext/pgsql/tests/14pg_update.php.skipif
<?php
include("skipif.inc");
skip_bytea_not_escape();
?>